# openwork

./: .dockerignore  .gitignore  .infisical.json  AGENTS.md  ARCHITECTURE.md  DESIGN-LANGUAGE.md  DESIGN-SYSTEM.md  PRODUCT.md  README.md  README_JA.md  README_ZH.md  README_ZH_hk.md  RELEASE.md  SECURITY.md  STATS.md  STATS_V2.md  SUPPORT.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci-tests.yml  ci.yml  deploy-den-control-plane.yml  deploy-den-v2.yml  deploy-den.yml  download-stats.yml  opencode-agents.yml  prerelease.yml  release-daytona-snapshot.yml  (+2 more)
.opencode/: openwork.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  types.rs
apps/desktop/src-tauri/src/commands/: engine.rs  misc.rs  openwork_server.rs  orchestrator.rs  workspace.rs
apps/desktop/src-tauri/src/engine/: spawn.rs
apps/desktop/src-tauri/src/openwork_server/: manager.rs  mod.rs  spawn.rs
apps/desktop/src-tauri/src/orchestrator/: mod.rs
apps/desktop/src-tauri/src/workspace/: state.rs
changelog/: release-tracker-2026-02-19.md  release-tracker-2026-02-26.md  release-tracker-2026-03-15.md  release-tracker-2026-03-20.md  release-tracker-2026-04-04.md
examples/microsandbox-openwork-rust/: Cargo.toml  README.md
examples/microsandbox-openwork-rust/.state/openwork-microsandbox-rust-homefix/data/openwork-orchestrator/opencode-config/tools/: opencode_router_send.ts  opencode_router_status.ts
examples/microsandbox-openwork-rust/src/: main.rs
scripts/: build-microsandbox-openwork-image.sh  check-server-v2-contract.mjs  create-daytona-openwork-snapshot.sh  dev-den-local.sh  dev-headless-web.ts  dev-local.mjs  dev-server-v2.mjs  dev-web-local.sh  dev-windows.cmd  generate-changelog.mjs
(+512 files in other folders)
