[package]
name = "microsandbox-openwork-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
microsandbox = "0.3.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
