[package]
name = "openwork"
version = "0.11.186"
description = "OpenWork"
authors = ["Different AI"]
edition = "2021"
default-run = "OpenWork-Dev"

[lib]
name = "openwork"

[[bin]]
name = "OpenWork-Dev"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
json5 = "0.4"
notify = "6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
sha2 = "0.10"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2.5.6"
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2.10", features = ["json"] }
gethostname = "0.4"
local-ip-address = "0.5"
walkdir = "2.5"
zip = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
